trunk/Archive2/65/5b0db265881fa3/output
main.cpp:12:30: error: expected '{' or ','
    Data() : iterations(1000);
                             ^
1 error generated.
